[package]
name = "gps-spoofing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
linfa-linear = "0.7.0"
rand = { version = "0.8", default-features = false }
ndarray = { version = "0.15", default-features = false }
tletools = { git = "https://github.com/p3zhy/tletools-rs", default-features = false }
